Update Lindsey Brantley Git Example.html

--- a/StudentFiles/Lindsey Brantley Git Example.html
+++ b/StudentFiles/Lindsey Brantley Git Example.html
@@ -13,3 +13,4 @@
 <body>
 <p class="p1">Hi my name is Lindsey.</p>
 This is my Github example. 
+  EDIT: I deleted 2 lines and added a sentence and this line. 
