--- a/StudentFiles/Jimmy Lowe HTML File.html
+++ b/StudentFiles/Jimmy Lowe HTML File.html
@@ -2,6 +2,6 @@
 </head>
 <body>
 <p>This is a file that I made for my assignment.  My commit will be adding the next paragraph.</p>
-<p></p>
+<p>This is the paragraph that I added with a commit!!!</p>
 </body>
 </html>
