--- a/StudentFiles/savannah wheeler.html
+++ b/StudentFiles/savannah wheeler.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-<p class="p1">ahhhhhhhhhhhhhhhhhhhhhh</p>
-<p class="p1">AHHHHHHHHHHHHHHHHH</p>
+<p class="p1">ahhhhhhhhhhhhhhhhhhhhhhhhh</p>
+<p class="p1">AHHHHHHHHHHHHHHHHHHHHH</p>
 </body>
 </html>
