--- a/StudentFiles/SusanSale.html
+++ b/StudentFiles/SusanSale.html
@@ -3,6 +3,6 @@
 <ol> 
 <li> Make a great haiku </li>
 <li> Upload to GitHub repos </li>
-<li> Make sure it's five-seven-five </li>
+<li> Check your syllables! </li>
 </ol>
 </html>
